[Cleanup] Switch to pcoin organization

--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -29,8 +29,8 @@ Build-Depends: debhelper,
  dh-systemd
 Standards-Version: 3.9.2
 Homepage: http://www.pcoin.dev
-Vcs-Git: git://github.com/PIVX-Project/PIVX.git
-Vcs-Browser: http://github.com/PIVX-Project/PIVX
+Vcs-Git: git://github.com/pcoinproject/pcoin.git
+Vcs-Browser: http://github.com/pcoinproject/pcoin
 
 Package: pivxd
 Architecture: any
