--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,14 @@ reset-files.bash
 *.tar.gz
 
 *.exe
-src/pivx
-src/pivxd
-src/pivx-cli
-src/pivx-tx
-src/bench/bench_pivx
-src/test/test_pivx
-src/test/test_pivx_fuzzy
-src/qt/test/test_pivx-qt
+src/pcoin
+src/pcoind
+src/pcoin-cli
+src/pcoin-tx
+src/bench/bench_pcoin
+src/test/test_pcoin
+src/test/test_pcoin_fuzzy
+src/qt/test/test_pcoin-qt
 src/test/fuzz/address_deserialize
 src/test/fuzz/addrman_deserialize
 src/test/fuzz/banentry_deserialize
@@ -61,8 +61,8 @@ confdefs.h
 conftest.cpp
 conftest.err
 libtool
-src/config/pivx-config.h
-src/config/pivx-config.h.in
+src/config/pcoin-config.h
+src/config/pcoin-config.h.in
 src/config/stamp-h1
 src/obj
 share/setup.nsi
@@ -88,7 +88,7 @@ src/qt/test/moc*.cpp
 *.pyc
 *.o
 *.o-*
-.pivx
+.pcoin
 *.a
 *.pb.cc
 *.pb.h
@@ -111,8 +111,8 @@ src/qt/test/moc*.cpp
 # Compilation and Qt preprocessor part
 *.qm
 Makefile
-pivx-qt
-PIVX-Qt.app
+pcoin-qt
+PCOIN-Qt.app
 background.tiff*
 
 # Rust
@@ -122,7 +122,7 @@ target/
 
 # Unit-tests
 Makefile.test
-pivx-qt_test
+pcoin-qt_test
 src/test/buildenv.py
 
 # Resources cpp
@@ -138,7 +138,7 @@ build
 #lcov
 *.gcno
 /*.info
-test_pivx.coverage/
+test_pcoin.coverage/
 total.coverage/
 coverage_percent.txt
 
@@ -169,8 +169,8 @@ moc_*
 *.tmp
 ui_*
 build*
-pivxd.*
-pivxd-new-gui.*
+pcoind.*
+pcoind-new-gui.*
 /cov-int/
 
 #Remove
