--- a/contrib/linearize/example-linearize.cfg
+++ b/contrib/linearize/example-linearize.cfg
@@ -3,14 +3,14 @@
 rpcuser=someuser
 rpcpassword=somepassword
 host=127.0.0.1
-port=51470
+port=22502
 
 # bootstrap.dat hashlist settings (linearize-hashes)
 max_height=313000
 
 # bootstrap.dat input/output settings (linearize-data)
-netmagic=90c4fde9
-input=/home/example/.bitcoin/blocks
+netmagic=92a12b5c
+input=/home/example/.pcoin/blocks
 output_file=/home/example/Downloads/bootstrap.dat
 hashlist=hashlist.txt
 split_year=1
